--- a/sourse_code/index.html
+++ b/sourse_code/index.html
@@ -15,12 +15,12 @@
     <header id="Headersection">
         <div class="nav-belt" id="nav-belts">
             <div class="image-section">
-                <img src="../logo/logo6.png" alt="companylogo">
+              <a href="./index.html">  <img src="../logo/logo6.png" alt="companylogo"></a>
             </div>
             <div class="location-section">
                 <div class="loc-logo"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
                 <div class="t-loc">
-                    <span style="font-size: 13px;"> Hello</span><br>
+                    <span style="font-size: 13px; color: rgb(198, 197, 197);"> Hello</span> <span id="disname" style=" color: rgb(198, 197, 197);"></span><br>
                     <span style="font-size: 14px;">Select your address</span>
                 </div>
             </div>
@@ -61,7 +61,7 @@
             </div>
             <div class="login-orders-cart">
                 <div class="login" onmouseenter="show()" onmouseleave="hide()">
-                    <span style="font-weight: 300;">Hello,<span>sign in</span></span><br>
+                    <span style="font-weight: 300; color: rgb(198, 197, 197);">Hello,<span id="displayName" style="color: rgb(198, 197, 197);"></span></span><br>
                     <span style="font-size: 14px;">Account & Lists </span>
                 </div>
             <div class="orders">
@@ -71,10 +71,10 @@
             <div>
                 <div class="cart">
                     <div class="count">
-                        <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;">0</span>
+                       <a href="./cart.html" style="color: orange; text-decoration: none;"> <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;">0</span></a>
                     </div>
                     <div class="cart-logo">
-                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        <a href="../sourse_code/cart.html" style="color: white; cursor: pointer;"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -1080,7 +1080,7 @@
    
         </div>
         <div class="sig-in-1">
-            <a href="./SignIn.html"><p class="sig-in">Sign in</p></a>
+            <a href="./SignIn.html"><p class="sig-in" >Sign in</p></a>
         </div>
         <div>
             <p>New customer? <a href="./SiginUpPage.html" style="text-decoration: none; color: black;"><span style="color: #30a2b6;">Start here.</span></a></p>
