--- a/sourse_code/index.html
+++ b/sourse_code/index.html
@@ -71,7 +71,7 @@
             <div>
                 <div class="cart">
                     <div class="count">
-                       <a href="./cart.html" style="color: orange; text-decoration: none;"> <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;">0</span></a>
+                       <a href="./cart.html" style="color: orange; text-decoration: none;"> <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;"><span id="displayCount">0</span></span></a>
                     </div>
                     <div class="cart-logo">
                         <a href="../sourse_code/cart.html" style="color: white; cursor: pointer;"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
@@ -122,6 +122,7 @@
           <li>Baby Wishlist</li>
           <li>Discover Your Style</li>
           <li>Explore Showroom</li>
+          <li id="logout">Logout</li>
         </ul>
         <ul>
           <li><h4>Your Account</h4></li>
