--- a/sourse_code/cart.html
+++ b/sourse_code/cart.html
@@ -69,7 +69,7 @@
             <div>
                 <div class="cart">
                     <div class="count">
-                        <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;"><a href="./cart.html" style="color: rgb(239, 174, 10); text-decoration: none;">0</a></span>
+                        <span style="font-size: 20px; font-weight: bolder; padding-left: 15px; padding-top: -5px;"><a href="./cart.html" style="color: rgb(239, 174, 10); text-decoration: none;"><span id="displayCount">0</span></a></span>
                     </div>
                     <div class="cart-logo">
                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -120,6 +120,7 @@
           <li>Baby Wishlist</li>
           <li>Discover Your Style</li>
           <li>Explore Showroom</li>
+          <li>Logout</li>
         </ul>
         <ul>
           <li><h4>Your Account</h4></li>
@@ -174,7 +175,7 @@
         <!-- ===================================payment page  -->
         <div id="payment-page">
             <div id="payment-div">
-                <div>
+                <div>1
                     <div id="icon-div"><i class="fa-solid fa-square-check" style="color:green;"></i>
                     <span>Your order is eligible for FREE Delivery. <span style="color: black;">Select this option at</span> <a href="" a="" style="text-decoration: none; color: #30a2b6;">Details</a></span></div>
                     <h4 style="padding-top: 25px; font-weight: 100; font-size: 23px;">Subtotal (<span id="total-item">0</span> item): <b><span id="total-value" style="line-height: 1.5;"> <br> 0.00</span></b></h4>
