--- a/sourse_code/index.html
+++ b/sourse_code/index.html
@@ -51,7 +51,8 @@
                     <option value="Card&Gifts">Card & Gifts</option>
                
                 </select>
-                <input type="text" name="" id="input-bar" class="input-bar" >
+                <input type="text" name="" id="input-bar" class="input-bar">
+                
                 <span><i class="fa fa-1x fa-search" aria-hidden="true"></i></span>
 
             </div>
@@ -123,6 +124,7 @@
           <li>Discover Your Style</li>
           <li>Explore Showroom</li>
           <li id="logout">Logout</li>
+         <a href="" style="text-decoration: none;"> <li> Admin</li></a>
         </ul>
         <ul>
           <li><h4>Your Account</h4></li>
@@ -384,7 +386,7 @@
         <div class="sec-start">
             <div class="sec-start-1 blockbusterDeals">
                 <h1>Blockbuster Deals</h1> 
-                <span style="color: #30a2b6;">See all details</span>
+               <a href="./mobilepage.html" style="text-decoration: none; padding-top: 18px;"> <span style="color: #30a2b6;">See all details</span></a>
             </div>
 <div class="scrolling-image">
     <!-- Swiper -->
@@ -1018,7 +1020,7 @@
         <div class="sec-start-3">
             <div class="sec-start-4 Shopdetails">
                 <h1>Shop deals in top categories</h1> 
-                <span style="color: #30a2b6;">See all details</span>
+               <a href="./productpage.html" style="text-decoration: none; padding-top: 18px;"><span style="color: #30a2b6;">See all details</span></a> 
             </div>
 <div class="scrolling-image-3">
     <!-- Swiper -->
